--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,18 +21,10 @@ jobs:
         ARGOCD_AUTH_TOKEN: ${{ secrets.ARGOCD_AUTH_TOKEN }}
         ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }}
       run: |
-        # Download and install ArgoCD CLI
         curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
         sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
         rm argocd-linux-amd64
-        
-        # Login to ArgoCD using token authentication
-        argocd login $ARGOCD_SERVER \
-          --auth-token $ARGOCD_AUTH_TOKEN \
-          --insecure \
-          --grpc-web
-        
-        # Create/Update the application
+        argocd login $ARGOCD_SERVER --auth-token $ARGOCD_AUTH_TOKEN --insecure
         argocd app create webapp-dev \
           --repo https://github.com/${{ github.repository }} \
           --path helm/webapp \
@@ -40,8 +32,4 @@ jobs:
           --dest-namespace development \
           --helm-chart webapp \
           --values values-dev.yaml \
-          --upsert \
-          || echo "Application already exists, attempting update..."
-        
-        # Sync the application
-        argocd app sync webapp-dev --timeout 180
+          --upsert
